syntax = "proto3";

package eventbus;
import "google/protobuf/any.proto";

// Request
message ClientComRequest {
    string id = 1;
    string qid = 2;
    string traceID = 3 [json_name = "trace_id"];
    ClientComMeta meta = 4;
    google.protobuf.Any params = 5;
}

// Meta 统一接入请求解析参数集合，统一接入会解析其中的值，根据值将请求发送给相关的后端APP
message ClientComMeta {
    string resource = 1 [json_name = "res"]; // 请求后端APP的资源名称
    string action = 2 [json_name = "act"]; // 对资源进行的相关操作
    string revision = 3 [json_name = "rev"]; // 资源的版本
    bool subscription = 4 [json_name = "sub"]; // 本次请求是否订阅推送
    string key = 5; // 如果订阅推送，订阅的key，key 可以为空字符串
    string uuid = 6; // 标识手机端设备ID
    string clientVersion = 7 [json_name = "cver"]; // 客户端的版本
    string platform = 8 [json_name = "platf"]; // 客户端所用平台，ios/android
    string hash = 9; // 用户手机号码的hash
    string signature = 10 [json_name = "sig"]; // 用户登录时本地的私钥的签名
}

message ServerComResponse {
    string id = 1;
    uint32 code = 2;
    string text = 3;
    string traceID = 4 [json_name = "trace_id"];
    string seqID = 5;
    int64 ts = 6;
    google.protobuf.Any header = 7;
    google.protobuf.Any body = 8;
}

message HiMessage {
    string version = 1;
    bool accepted = 2;
}

message LoginMessage {
    string uid = 1;
    string token = 2;
    int64 expires = 3;
}

message ExampleEcho {
    string name = 1;
    string content = 2;
}



message RegisterRequest {
    //app名称
    string app_name = 1;
    //方法路径  bytes[0]:verison bytes[1]:resource bytes[2]:action 
    bytes method_path = 2;
}

message RegisterResponse {
    bool accepted = 1;
    uint32 code = 2;
    string text = 3;
}

service Bus {
    // APP向event bug 注册
    rpc Register (RegisterRequest) returns (RegisterResponse);
    //rpc pipe (stream AppComMessage) returns (stream GatewayComMessage);
    //
    //rpc route (AppComMessage) returns (AppComMessage);
}